# fishtank

./: Cargo.toml  DEFINITIONS.md  Makefile  README.md  TODO  TODO.md  do  make
.github/workflows/: fish.yml  release.yml
doc/: tankcfg-preset.1.md  tankcfg.1.md  tankctl-build.1.md  tankctl-build.md  tankctl-create.1.md  tankctl-create.md  tankctl-down.1.md  tankctl-down.md  tankctl-edit.1.md  tankctl-edit.md  tankctl-enter.1.md  tankctl-exec.1.md  tankctl-restart.1.md  tankctl-reup.1.md  tankctl-start.1.md  tankctl-stop.1.md  tankctl-up.1.md  tankctl.1.md  tankctl.md
doc/man/: tankcfg-preset.1  tankcfg.1  tankctl-build.1  tankctl-create.1  tankctl-down.1  tankctl-edit.1  tankctl-enter.1  tankctl-exec.1  tankctl-restart.1  tankctl-reup.1  tankctl-start.1  tankctl-stop.1  tankctl-up.1  tankctl.1
src/: build.rs  cli.rs  main.fish  main.rs  podman.rs
src/common/: 00-header.fish  10-trap.fish  10-util.fish  20-trap.fish  30-table.fish
src/shell/: fish.sh  posix.sh  setup.fish
src/tankcfg/: 00-help.fish  00-main.fish  10-main.fish
src/tankctl/: 00-help.fish  10-helpers.fish  10-podman.fish  20-build.fish  30-main.fish
src/util/: helpers.fish  table.fish  trap.fish  traps.fish
