[package]
name        = "box"
authors     = ["Colonial"]
version     = "1.0.0"
edition     = "2021"
description = "A simple container manager for your shell."
repository  = "https://github.com/Colonial-Dev/box"
license     = "AGPL-3.0"

[profile.release]
opt-level     = "z"
codegen-units = 1
lto           = true

[dependencies]
# Command line.
clap = { version = "4.5.23", features = ["derive"] }
nucleo-matcher = "0.3.1"
dialoguer = "0.11.0"
comfy-table = "7.1.3"
colored = "3.0.0"

# Logging and error reporting
color-eyre = "0.6.3"
env_logger = "0.11.6"
log = "0.4.22"

# Serde cinematic universe
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"

# Other
seahash = "4.1.0"
petgraph = "0.7.0"
uzers = "0.12.1"

[[bin]]
name = "bx"
path = "src/main.rs"
